Css to specific component and clases to specific component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,14 @@
   <hr>
 
   <app-ng-style></app-ng-style>
+  <br>
+  <br>
+  <hr>
 
+  <app-css></app-css>
+  <br>
+  <br>
+  <hr>
+
+  <app-clases></app-clases>
 </div>
