--- a/src/app/components/clases/clases.component.html
+++ b/src/app/components/clases/clases.component.html
@@ -15,5 +15,22 @@
 <button type="button"
         [ngClass]="{ 'text-danger': propiedades.danger, 'text-info': !propiedades.danger}"
         (click)="propiedades.danger=!propiedades.danger ">
-  Propiedades
+  Cambiar
 </button>
+
+<br><br>
+<h3>Proceso Asíncrono</h3>
+
+<button
+  (click)="ejecutar()"
+  class="btn btn-primary"
+  [disabled]="loading"
+  type="button" name="button">
+  <i [ngClass]="{'fa-save':!loading,
+    'fa-refresh fa-spin': loading}"
+     class="fa"
+  ></i>
+  <span *ngIf="!loading"> Guardar cambios</span>
+  <span *ngIf="loading"> Espere por favor</span>
+</button>
+<br><br>
