--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,9 @@
+<app-navbar></app-navbar>
 <div class="container main-container">
   <h1>Demos <small>angular</small></h1>
   <hr>
-
-  <app-ng-style></app-ng-style>
-  <br>
-  <br>
-  <hr>
-
-  <app-css></app-css>
-  <br>
-  <br>
-  <hr>
-
-  <app-clases></app-clases>
-  <br>
-  <br>
-  <hr>
-
-  <p [appResaltado]="'orange'">
-    Hola Mundo
-  </p>
+  <router-outlet></router-outlet>
 </div>
+<br>
+<br>
+<hr>
